// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill Component should render basic Pill Component correctly 1`] = `
.c1 {
  font-family: Poppins,sans-serif;
  font-weight: 400;
  margin: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  white-space: nowrap;
  border: 1px solid #0080EB;
  color: #0080EB;
  background-color: #FCFCFC;
  height: 2.375rem;
  font-size: 0.875rem;
  border-radius: 1.25rem;
  padding: 0 0.75rem;
}

.c0[role='button'] {
  cursor: pointer;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  white-space: nowrap;
  border: 1px solid #0080EB;
  color: #FCFCFC;
  background-color: #0080EB;
  height: 2.375rem;
  font-size: 0.875rem;
  border-radius: 1.25rem;
  padding: 0 0.75rem;
}

.c2[role='button'] {
  cursor: pointer;
}

<div>
  <div
    class="c0"
  >
    <p
      class="c1"
    >
      test
    </p>
  </div>
  <div
    class="c2"
  >
    <p
      class="c1"
    >
      test actived
    </p>
  </div>
</div>
`;

exports[`Pill Component should render icons of Pill Component correctly 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 svg {
  width: 16px;
  height: 16px;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 svg {
  width: 14px;
  height: 14px;
}

.c1 {
  font-family: Poppins,sans-serif;
  font-weight: 400;
  margin: 0;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  white-space: nowrap;
  border: 1px solid #0080EB;
  color: #0080EB;
  background-color: #FCFCFC;
  height: 2.375rem;
  font-size: 0.875rem;
  border-radius: 1.25rem;
  padding: 0 0.75rem;
}

.c0[role='button'] {
  cursor: pointer;
}

.c3 {
  color: #0080EB;
}

.c6 {
  margin-right: 0.5rem;
}

.c4 {
  margin-left: 0.5rem;
}

<div>
  <div
    class="c0"
  >
    <p
      class="c1"
    >
      has closed
    </p>
    <div
      class="c2 c3 c4"
      data-icon-name="close"
    >
      <span />
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c5 c3 c6"
      data-icon-name="check"
    >
      <span />
    </div>
    <p
      class="c1"
    >
      checked
    </p>
  </div>
  <div
    class="c0"
  >
    <div
      class="c5 c3 c6"
      data-icon-name="check"
    >
      <span />
    </div>
    <p
      class="c1"
    >
      checked and has closed
    </p>
    <div
      class="c2 c3 c4"
      data-icon-name="close"
    >
      <span />
    </div>
  </div>
</div>
`;
